cmake_minimum_required(VERSION 3.9)
project(signal_exercises)

set(CMAKE_CXX_STANDARD 11)

add_executable(signal_exercises
        example2.c
        example3.c
        example4.c
        example5.c
        example6.c
        example7.c
        example8.c
        exercise1.c
        exercise2.c
        exercise3.c
        Makefile)
